objects/AsiaProductItemSpecification__c.object
<CustomObject>
    <fields>
        <fullName>ModelType__c</fullName>
        <externalId>true</externalId>
        <label>Model Type</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Product_Img__c</fullName>
        <label>Product Img</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Specification__c</fullName>
        <label>Specification</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <label>Product Item Specification</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>ModelType__c</columns>
        <columns>Specification__c</columns>
        <columns>Product_Img__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>View_ByModel</fullName>
        <columns>NAME</columns>
        <columns>ModelType__c</columns>
        <columns>Product_Img__c</columns>
        <columns>Specification__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ModelType__c</field>
            <operation>contains</operation>
            <value>JSM-IT100</value>
        </filters>
        <label>機種名で検索</label>
        <language>ja</language>
        <sharedTo>
            <group>IT_Infomation_System_G</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>APIS-{00000000}</displayFormat>
        <label>AsiaProductItemSpecification</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>